web_example1_gke/web-example-service.yml
# build service node/port to access the deployment
apiVersion: v1
kind: Service
metadata:
  name: web01
spec:
  type: NodePort
  selector:
    app: web-example1
  ports:
    - nodePort: 30001
      port: 8080
      targetPort: 8080
